fix: prevent persistent vertical scrollbar (#31)

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -185,7 +185,7 @@ textarea {
 html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 * {
   box-sizing: inherit;
